--- a/index.html
+++ b/index.html
@@ -169,8 +169,14 @@
 						<div class="grid_12">
 						
 							<div class="intro-widget">
-								<h2>What is OptimaSales?</h2>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tempus libero justo, non egestas dolor. Donec a venenatis massa. Suspendisse ornare, lacus sed vestibulum egestas, velit lectus facilisis neque, at mattis augue dolor quis est. Morbi non lobortis magna. Vestibulum quis lectus sit amet nisi tempus cursus.
+								<h2>Co je mowflow?</h2>
+
+								Mowflow Vás provede vývojem celé multiplatformní aplikace od návrhu až po konečný produkt.
+
+
+
+								Vytváříte mobilní aplikace, přičemš se Vám stalo 
+								S mowflow nevytvoříte pouze grafický návrh webových a mobilních aplikací, ale pomocí mowflow dokážete vytvořit rychle a jednoduše celý program!
 							</div><!-- //.intro-widget -->
 						
 						</div>
@@ -193,7 +199,7 @@
 									<figure class="img-holder">
 										<a href="#"><img src="images/service-img1.png" alt="" width="220" height="220" border="0" /></a>
 									</figure>
-									<h3><a href="#">Collaboration in real time</a></h3>
+									<h3><a href="#">Za jeden čas, více platforem!</a></h3>
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pharetra turpis ac arcu cursus auctor. Integer sed odio orci. Nulla egestas iaculis rutrum. Donec non nisi sit amet massa fringilla interdum ut in magna. 
 								</li>
 								<li>
