--- a/index.html
+++ b/index.html
@@ -171,12 +171,7 @@
 							<div class="intro-widget">
 								<h2>Co je mowflow?</h2>
 
-								Mowflow Vás provede vývojem celé multiplatformní aplikace od návrhu až po konečný produkt.
-
-
-
-								Vytváříte mobilní aplikace, přičemš se Vám stalo 
-								S mowflow nevytvoříte pouze grafický návrh webových a mobilních aplikací, ale pomocí mowflow dokážete vytvořit rychle a jednoduše celý program!
+								Mowflow Vás provede vývojem celé multiplatformní aplikace od návrhu, až po konečný produkt. V mowflow si budete moct rychle a snadno poskládat svůj design spolu s funkcemi aplikace.
 							</div><!-- //.intro-widget -->
 						
 						</div>
@@ -200,7 +195,7 @@
 										<a href="#"><img src="images/service-img1.png" alt="" width="220" height="220" border="0" /></a>
 									</figure>
 									<h3><a href="#">Za jeden čas, více platforem!</a></h3>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pharetra turpis ac arcu cursus auctor. Integer sed odio orci. Nulla egestas iaculis rutrum. Donec non nisi sit amet massa fringilla interdum ut in magna. 
+									S mowflow si budete moc vybrat do jaké platformy Váš produkt "převedete". Mowflow podporuje Apple, Android, Windows mobile a další...
 								</li>
 								<li>
 									<figure class="img-holder">
