--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 										<a href="#"><img src="images/service-img1.png" alt="" width="220" height="220" border="0" /></a>
 									</figure>
 									<h3><a href="#">Za jeden čas, více platforem!</a></h3>
-									S mowflow si budete moc vybrat do jaké platformy Váš produkt "převedete". Mowflow podporuje Apple, Android, Windows mobile a další...
+									S mowflow si budete moc vybrat jakou cílovou platformu bude chtít oslovit. Mowflow podporuje Apple, Android, Desktop browsers,  Windows mobile a další...
 								</li>
 								<li>
 									<figure class="img-holder">
@@ -208,7 +208,7 @@
 									<figure class="img-holder">
 										<a href="#"><img src="images/service-img3.png" alt="" width="220" height="220" border="0" /></a>
 									</figure>
-									<h3><a href="#">Professional support</a></h3>
+									<h3><a href="#">J</a></h3>
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus velit consectetur ligula rutrum vestibulum vel eget libero. Etiam volutpat tincidunt placerat. Phasellus consequat nunc eget orci gravida condimentum vel ut ligula. 
 								</li>
 								
