initial animation of slider

--- a/index.html
+++ b/index.html
@@ -503,6 +503,8 @@
 	<script type="text/javascript" src="js/jquery.flexslider.js"></script>
 	<!-- Reveal Modal -->
 	<script type="text/javascript" src="js/jquery.reveal.js"></script>
+
+	<script type="text/javascript" src="js/slider.js"></script>
 	
 	<!-- Custom -->
 	<script type="text/javascript" src="js/custom.js"></script>
@@ -522,7 +524,8 @@
         }
       });
     });
-		
+		animateSlider();
+
 	</script>
 	
 	
