--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   ================================================== -->
 	<!-- Normalize default styles -->
 	<link rel="stylesheet" href="css/normalize.css" media="screen" />
-	<!-- Fonts -->
-	<link rel="stylesheet" href="css/fonts.css" media="screen" />
+	<!-- Fonts 
+	<link rel="stylesheet" href="css/fonts.css" media="screen" />-->
 	<!-- Skeleton grid system -->
 	<link rel="stylesheet" href="css/skeleton.css" media="screen" />
 	<!-- Base Template Styles-->
