--- a/index.html
+++ b/index.html
@@ -397,6 +397,13 @@
 	<script type="text/javascript" src="js/slider.js"></script>
 	<!-- Custom -->
 	<script type="text/javascript" src="js/custom.js"></script>
+
+	<script type="text/javascript">
+		$(document).ready(function() {
+			animateSlider();
+		});
+
+	</script>
 	
 	
 	
