Bugfix removed calling custom.js.

--- a/index.html
+++ b/index.html
@@ -396,12 +396,14 @@
 	
 	<script type="text/javascript" src="js/slider.js"></script>
 	<!-- Custom -->
-	<script type="text/javascript" src="js/custom.js"></script>
+	<!-- <script type="text/javascript" src="js/custom.js"></script> -->
 
 	<script type="text/javascript">
 		$(document).ready(function() {
 			animateSlider();
 		});
+
+
 
 	</script>
 	
