--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 			<!-- BEGIN WIDGETS -->
 			<section id="widgets">
 				
-				<p>I <img src="images/love.png"/><img src="images/logo.png"></p>
+				<p id="love">I<img id="heart" src="images/love.png"/><img  src="images/logo.png"></p>
 			</section>
 			<!-- END WIDGETS -->
 			
