Added logo for presentation.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
 			<!-- END HEADER -->
 <!-- BEGIN SLIDER -->
 			<section id="slider">
-				
+				<div id="pruhl">
+                	<img id="logo2" src="images/logo2.png">
+           		</div>
 				<div class="container">
 					<div class="grid_12">
 						<div id="inter">
