--- a/index.html
+++ b/index.html
@@ -109,10 +109,15 @@
 				<div class="container">
 					<div class="grid_12">
 						<div id="inter">
-							<div  id="obr1"><img src="images/step-1.png"/></div>	
-							<div  id="obr2"><img src="images/step-2.png"/></div>	
+							<div  id="obr1"><img src="images/step-1.png"/></div>
+							<div  id="arr1"><img src="images/arrow.png"/></div>	
+							<div  id="obr2"><img src="images/step-2.png"/></div>
+							<div  id="arr2"><img src="images/arrow.png"/></div>	
 							<div  id="obr3"><img src="images/step-3.png"/></div>
-						</div>	
+						</div>
+						<!-- <div id="inter2">
+							<img src="images/logoSlider.png">
+						</div>	 -->
 					</div>
 				</div>
 				
